--- a/src/foot5x5/MainBundle/Resources/views/index.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/index.html.twig
@@ -4,8 +4,8 @@
 
 {% block content %}
 
-<div id="results-container" class="col-md-12">
-    <div class="col-md-6">
+<div id="results-container" class="col-xs-12">
+    <div class="col-lg-6 col-md-8 col-sm-10">
         <h2><span class="label dark-blue-grad">Dernier match</span></h2>
         {% if lastResult is not null %}
         <table id="result-table" class="table table-bordered table-condensed">
@@ -24,12 +24,12 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="col-md-2 result-teamA">
+                    <td class="col-md-3 col-sm-4 col-xs-3 result-teamA">
                         <dl>
                         {% for matchPlayer in lastResult.matchPlayers %}
                             {% if matchPlayer.match.id == lastResult.id and matchPlayer.team == "A" %}
                             <a data-popup-open="popup-{{ matchPlayer.player.id }}" href="#">
-                                <dt class="well result-matchPlayers" playerid="{{ matchPlayer.player.id }}">
+                                <dt>
                                 {#
                                 <img src="{{ asset("bundles/foot5x5main/images/icon-user-default.png") }}" alt="{{ matchPlayer.player.name }}" />
                                 #}
@@ -45,23 +45,23 @@
                         {% endfor %}
                         </dl>
                     </td>
-                    <td {% if lastResult.scoreTeamA > lastResult.scoreTeamB %} class="col-md-1 result-score result-victory" {% endif %}
-                        {% if lastResult.scoreTeamA == lastResult.scoreTeamB %} class="col-md-1 result-score result-draw" {% endif %}
-                        {% if lastResult.scoreTeamA < lastResult.scoreTeamB %} class="col-md-1 result-score result-defeat" {% endif %}>
+                    <td {% if lastResult.scoreTeamA > lastResult.scoreTeamB %} class="col-xs-1 result-score result-victory" {% endif %}
+                        {% if lastResult.scoreTeamA == lastResult.scoreTeamB %} class="col-xs-1 result-score result-draw" {% endif %}
+                        {% if lastResult.scoreTeamA < lastResult.scoreTeamB %} class="col-xs-1 result-score result-defeat" {% endif %}>
                         {{ lastResult.scoreTeamA }}
                     </td>
-                    <td class="col-md-1 result-score">-</td>
-                    <td {% if lastResult.scoreTeamA > lastResult.scoreTeamB %} class="col-md-1 result-score result-defeat" {% endif %}
-                        {% if lastResult.scoreTeamA == lastResult.scoreTeamB %} class="col-md-1 result-score result-draw" {% endif %}
-                        {% if lastResult.scoreTeamA < lastResult.scoreTeamB %} class="col-md-1 result-score result-victory" {% endif %}>
+                    <td class="col-xs-1 result-score">-</td>
+                    <td {% if lastResult.scoreTeamA > lastResult.scoreTeamB %} class="col-xs-1 result-score result-defeat" {% endif %}
+                        {% if lastResult.scoreTeamA == lastResult.scoreTeamB %} class="col-xs-1 result-score result-draw" {% endif %}
+                        {% if lastResult.scoreTeamA < lastResult.scoreTeamB %} class="col-xs-1 result-score result-victory" {% endif %}>
                         {{ lastResult.scoreTeamB }}
                     </td>
-                    <td class="col-md-2 result-teamB">
+                    <td class="col-md-3 col-sm-4 col-xs-3 result-teamB">
                         <dl>
                         {% for matchPlayer in lastResult.matchPlayers %}
                             {% if matchPlayer.match.id == lastResult.id and matchPlayer.team == "B" %}
                             <a data-popup-open="popup-{{ matchPlayer.player.id }}" href="#">
-                                <dt class="well">
+                                <dt>
                                     <span>{{ matchPlayer.player.name }}</span>
                                     {% if matchPlayer.player.user is null %}
                                         <img src="{{ 'uploads/img/profilePic_default.png' | imagine_filter('avatar_40') }}" alt="profilePic_default.png" />
@@ -82,64 +82,64 @@
         {% endif %}
     </div>
 </div>
-<div id="standing-container" class="col-md-12">
-    <div class="col-lg-10 table-responsive">
-        <h2><span class="label dark-blue-grad">Classement en cours</span></h2>
-        {% if lastResult is not null %}
-            {% if lastStanding.rankings %}
-            <table id="standing-table" class="table table-striped table-bordered table-condensed">
-                <thead class="dark-blue-grad">
-                    <tr>
-                        <th class="col-md-1 standing-center-column">##</th>
-                        <th class="col-md-2 standing-left-column">Nom</th>
-                        <th class="col-md-1 standing-center-column">PTS</th>
-                        <th class="col-md-1 standing-center-column">MJ</th>
-                        <th class="col-md-1 standing-center-column">G</th>
-                        <th class="col-md-1 standing-center-column">N</th>
-                        <th class="col-md-1 standing-center-column">P</th>
-                        <th class="col-md-1 standing-center-column">BP</th>
-                        <th class="col-md-1 standing-center-column">BC</th>
-                        <th class="col-md-1 standing-center-column">DIFF</th>
-                        <th class="col-md-1 standing-center-column">EVAL</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {% for ranking in lastStanding.rankings %}
-                    <tr {% if ranking.rank == 1 %} class="standing-first-player"
-                        {% elseif ranking.rank > 1 and ranking.rank <= 3 %} class="success"
-                        {% elseif ranking.rank > loop.length - 3 and ranking.rank < loop.length %} class="danger"
-                        {% elseif ranking.rank == loop.length %} class="standing-last-player"
-                        {% else %} class="standing-mid-table" {% endif %}>
-                        <td class="col-md-1 standing-center-column">{{ ranking.rank }}</td>
-                        <td class="col-md-2 standing-left-column">
-                            <div class="standing-player">
-                                {% if ranking.player.user is null %}
-                                    <img src="{{ 'uploads/img/profilePic_default.png' | imagine_filter('avatar_40') }}" alt="profilePic_default.png" />
-                                {% else %}
-                                    <img src="{{ ranking.player.user.pictureWebPath | imagine_filter('avatar_40') }}" alt="{{ ranking.player.user.profilePicture }}" />
-                                {% endif %}
-                                <strong>{{ ranking.player.name }}</strong>
-                            </div>
-                        </td>
-                        <td class="col-md-1 standing-center-column">{{ ranking.points }}</td>
-                        <td class="col-md-1 standing-center-column">{{ ranking.played }}</td>
-                        <td class="col-md-1 standing-center-column">{{ ranking.won }}</td>
-                        <td class="col-md-1 standing-center-column">{{ ranking.drawn }}</td>
-                        <td class="col-md-1 standing-center-column">{{ ranking.lost }}</td>
-                        <td class="col-md-1 standing-center-column">{{ ranking.goalsFor }}</td>
-                        <td class="col-md-1 standing-center-column">{{ ranking.goalsAgainst }}</td>
-                        <td class="col-md-1 standing-center-column">{{ ranking.goalsDiff }}</td>
-                        <td class="col-md-1 standing-center-column">{{ ranking.eval|number_format(2, '.') }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            {% else %}
-                <div class="alert alert-warning">Aucun classement trouvé pour le trimestre T0{{ lastStanding.trimester }} {{ lastStanding.year }}</div>
-            {% endif %}
+<div id="standing-container" class="col-xs-12">
+    <h2><span class="label dark-blue-grad">Classement en cours</span></h2>
+    <div class="table-responsive">    
+    {% if lastResult is not null %}
+        {% if lastStanding.rankings %}
+        <table id="standing-table" class="table table-striped table-bordered table-condensed">
+            <thead class="dark-blue-grad">
+                <tr>
+                    <th class="col-md-1 standing-center-column">##</th>
+                    <th class="col-md-2 standing-left-column">Nom</th>
+                    <th class="col-md-1 standing-center-column">PTS</th>
+                    <th class="col-md-1 standing-center-column">MJ</th>
+                    <th class="col-md-1 standing-center-column">G</th>
+                    <th class="col-md-1 standing-center-column">N</th>
+                    <th class="col-md-1 standing-center-column">P</th>
+                    <th class="col-md-1 standing-center-column">BP</th>
+                    <th class="col-md-1 standing-center-column">BC</th>
+                    <th class="col-md-1 standing-center-column">DIFF</th>
+                    <th class="col-md-1 standing-center-column">EVAL</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for ranking in lastStanding.rankings %}
+                <tr {% if ranking.rank == 1 %} class="standing-first-player"
+                    {% elseif ranking.rank > 1 and ranking.rank <= 3 %} class="success"
+                    {% elseif ranking.rank > loop.length - 3 and ranking.rank < loop.length %} class="danger"
+                    {% elseif ranking.rank == loop.length %} class="standing-last-player"
+                    {% else %} class="standing-mid-table" {% endif %}>
+                    <td class="col-md-1 standing-center-column">{{ ranking.rank }}</td>
+                    <td class="col-md-2 standing-left-column">
+                        <div class="standing-player">
+                            {% if ranking.player.user is null %}
+                                <img src="{{ 'uploads/img/profilePic_default.png' | imagine_filter('avatar_40') }}" alt="profilePic_default.png" />
+                            {% else %}
+                                <img src="{{ ranking.player.user.pictureWebPath | imagine_filter('avatar_40') }}" alt="{{ ranking.player.user.profilePicture }}" />
+                            {% endif %}
+                            <strong>{{ ranking.player.name }}</strong>
+                        </div>
+                    </td>
+                    <td class="col-md-1 standing-center-column">{{ ranking.points }}</td>
+                    <td class="col-md-1 standing-center-column">{{ ranking.played }}</td>
+                    <td class="col-md-1 standing-center-column">{{ ranking.won }}</td>
+                    <td class="col-md-1 standing-center-column">{{ ranking.drawn }}</td>
+                    <td class="col-md-1 standing-center-column">{{ ranking.lost }}</td>
+                    <td class="col-md-1 standing-center-column">{{ ranking.goalsFor }}</td>
+                    <td class="col-md-1 standing-center-column">{{ ranking.goalsAgainst }}</td>
+                    <td class="col-md-1 standing-center-column">{{ ranking.goalsDiff }}</td>
+                    <td class="col-md-1 standing-center-column">{{ ranking.eval|number_format(2, '.') }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
         {% else %}
-            <div class="alert alert-warning">Aucun classement trouvé pour le trimestre en cours.</div>
+            <div class="alert alert-warning">Aucun classement trouvé pour le trimestre T0{{ lastStanding.trimester }} {{ lastStanding.year }}</div>
         {% endif %}
+    {% else %}
+        <div class="alert alert-warning">Aucun classement trouvé pour le trimestre en cours.</div>
+    {% endif %}
     </div>
 </div>
 
