[Design] Random Draw view responsive

--- a/web/css/foot5x5.css
+++ b/web/css/foot5x5.css
@@ -731,18 +731,56 @@ table#standing-table tbody tr td div.standing-player strong {
 	font-size: 1em;
 	height: 30px;
 	width: 30%;
+	min-width: 80px;
+	max-width: 130px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 div#random-container {
 	padding: 0;
 	margin-top: 10px;
 }
 div#random-select-section {
-	border-right: 1px solid #191950;
+	border-bottom: 1px solid #191950;
 	display: block;
 	padding: 0;
+	min-width: 350px;
+	float: left;
+}
+
+@media (min-width: 992px) {
+	div#random-select-section {
+		border-right: 1px solid #191950;
+		border-bottom: none;
+		min-height: 320px;
+	}
+	div#random-select-section h3 {
+		margin-top: 6px;
+		margin-bottom: 18px;
+	}
+	div#random-teams-section {
+		margin-top: 0!important;
+		margin-left: 10px!important;
+	}
+	div#random-teamA,
+	div#random-teamB {
+		padding-left: 10px !important;
+		padding-right: 10px !important;
+	}
 }
 div#random-teams-section {
 	display: block;
+	padding-left: 0;
+	padding-right: 0;
+	float: left;
+	margin-top: 15px;
+}
+div#random-teamA,
+div#random-teamB {
+	padding-left: 0;
+	min-width: 200px;
+	padding-right: 10px;
 }
 div#random-draws-container {
 	padding: 0;
@@ -750,9 +788,12 @@ div#random-draws-container {
 div#random-btn {
 	padding: 0;
 	margin-top: 10px;
+	margin-bottom: 10px;
 }
 div#random-btn input {
 	width: 30%;
+	min-width: 80px;
+	max-width: 130px;
 }
 div#random-teams-section h2 {
 	margin-top: 0;
@@ -760,7 +801,7 @@ div#random-teams-section h2 {
 dl#random-list {
 	margin-top: 20px;
 	margin-bottom: 20px;
-	width: 80%;
+	width: 100%;
 }
 dl#random-list dt {
 	border: 1px solid #191950;
