[Design] Finance view responsive

--- a/src/foot5x5/MainBundle/Resources/views/finance.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/finance.html.twig
@@ -11,11 +11,11 @@
 </div>
 {% endfor %}
 {% if transactions %}
-<div id="finances-container" class="col-md-12 well">
+<div id="finances-container" class="col-sm-12 well">
     {% if debts is defined %}
-    <div class="col-md-7">
+    <div class="col-sm-12 col-md-7">
         <h3><span class="label">Bilan</span></h3>
-        <div class="col-md-6">
+        <div id="finances-debts" class="col-sm-6">
             <table class="table table-striped table-bordered table-condensed">
                 <thead class="dark-blue-grad">
                     <tr>
@@ -25,18 +25,18 @@
                 <tbody>
                 {% for player in debts %}
                     <tr>
-                        <td>{{ player.name }}</td>
-                        <td class="col-md-4 text-center">{{ player.cashBalance }} €</td>
+                        <td class="col-xs-8">{{ player.name }}</td>
+                        <td class="col-xs-4 text-center">{{ player.cashBalance }} €</td>
                     </tr>
                 {% endfor %}
                     <tr id="finances-totalDebts">
-                        <td>TOTAL :</td>
-                        <td class="col-md-4 text-center">{{ totalDebts.total }} €</td>
+                        <td class="col-xs-8">TOTAL :</td>
+                        <td class="col-xs-4 text-center">{{ totalDebts.total }} €</td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <div class="col-md-6">
+        <div id="finances-credits" class="col-sm-6">
             <table class="table table-striped table-bordered table-condensed">
                 <thead class="dark-blue-grad">
                     <tr>
@@ -46,35 +46,35 @@
                 <tbody>
                 {% for player in credits %}
                     <tr>
-                        <td>{{ player.name }}</td>
-                        <td class="col-md-4 text-center">{{ player.cashBalance }} €</td>
+                        <td class="col-xs-8">{{ player.name }}</td>
+                        <td class="col-xs-4 text-center">{{ player.cashBalance }} €</td>
                     </tr>
                 {% endfor %}
                     <tr id="finances-totalCredits">
                         <td>TOTAL :</td>
-                        <td class="col-md-4 text-center">{{ totalCredits.total }} €</td>
+                        <td class="col-xs-4 text-center">{{ totalCredits.total }} €</td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
-    <div class="col-md-5">
+    <div id="finances-transactions" class="col-sm-12 col-md-5">
         <h3><span class="label">Dernières Transactions</span></h3>
         <table class="table table-striped table-bordered table-condensed">
             <thead class="dark-blue-grad">
                 <tr>
-                    <th class="col-md-3">Date</th>
-                    <th class="col-md-3">Donneur</th>
-                    <th class="col-md-3">Receveur</th>
-                    <th class="col-md-3 text-center">Montant</th>
+                    <th class="col-xs-3">Date</th>
+                    <th class="col-xs-3">Donneur</th>
+                    <th class="col-xs-3">Receveur</th>
+                    <th class="col-xs-2 text-center">Montant</th>
                 </tr>
             </thead>
             {% for tran in transactions %}
             <tr>
-                <td class="col-md-3">{{ tran.date|date('d/m/Y') }}</a></td>
-                <td class="col-md-3">{{ tran.giver.name }}</a></td>
-                <td class="col-md-3">{{ tran.receiver.name }}</a></td>
-                <td class="col-md-3 text-center">{{ tran.amount }} €</a></td>
+                <td class="col-xs-3">{{ tran.date|date('d/m/Y') }}</td>
+                <td class="col-xs-3">{{ tran.giver.name }}</td>
+                <td class="col-xs-3">{{ tran.receiver.name }}</td>
+                <td class="col-xs-2 text-center">{{ tran.amount }} €</td>
             </tr>
             {% endfor %}
         </table>
