--- a/src/foot5x5/MainBundle/Resources/views/note_form.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/note_form.html.twig
@@ -4,7 +4,7 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-<h2 class="text-center">{{ block('title') }}</h2>
+<h2 id="note-title" class="text-center">{{ block('title') }}</h2>
 {% for flashMessage in app.session.flashbag.get('success') %}
 <div class="alert alert-success">
     {{ flashMessage }}
@@ -13,11 +13,11 @@
 
 {% form_theme noteForm 'foot5x5MainBundle:Form:fields.html.twig' %}
 
-<div class="well">
+<div id="note-container" class="col-sm-12 well">
 {{ form_start(noteForm, { 'attr': {'class': 'form-horizontal'} }) }}
     <div class="form-group">
         {{ form_label(noteForm.valAtt, null, { 'label_attr':  {
-            'class': 'col-sm-4 control-label'
+            'class': 'col-xs-3 col-sm-4 control-label'
         }}) }}
         {{ form_widget(noteForm.valAtt, { 'attr':  {
             'class': 'form-control',
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group">
         {{ form_label(noteForm.valDef, null, { 'label_attr':  {
-            'class': 'col-sm-4 control-label'
+            'class': 'col-xs-3 col-sm-4 control-label'
         }}) }}
         {{ form_widget(noteForm.valDef, { 'attr':  {
             'class': 'form-control',
@@ -35,15 +35,15 @@
     </div>
     <div class="form-group">
         {{ form_label(noteForm.valPhy, null, { 'label_attr':  {
-            'class': 'col-sm-4 control-label'
+            'class': 'col-xs-3 col-sm-4 control-label'
         }}) }}
         {{ form_widget(noteForm.valPhy, { 'attr':  {
             'class': 'form-control',
             'rows': '8'
         }}) }}
     </div>
-    <div class="form-group">
-        <div class="col-sm-offset-4 col-sm-3">
+    <div id="note-submit" class="form-group">
+        <div>
             <input type="submit" class="btn btn-primary" value="{{ buttonLabel }}" />
         </div>
     </div>
