[Design] My Profile view reponsive

--- a/src/foot5x5/MainBundle/Resources/views/profile.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/profile.html.twig
@@ -17,45 +17,96 @@
 </div>
 {% endfor %}
 
-<div id="profile-container" class="col-md-12 well">
+<div id="profile-container" class="col-xs-12 well">
 	<div id="profile-pic">
 		<a data-popup-open="popup-upload" href="#">
 			<img src="{{ user.pictureWebPath | imagine_filter('avatar_200') }}" alt="{{ user.profilePicture }}" />
 		</a>
 		<a href="{{ path('edit_pwd') }}"><button type="button" class="btn btn-primary dark-blue-grad"><span class="glyphicon glyphicon-cog"></span> Modifier mot de passe</button></a>
 	</div>
-	<div id="profile-info">
+	<div id="profile-info" class="col-sm-8 col-md-9">
 		<h3><span class="label">Informations Générales</span></h3>
-		<p><span class="profile-info-label">Nom utilisateur : </span>{{ user.username }}</p>
-		<p><span class="profile-info-label">Date d'anniversaire : </span>{{ user.birthday|date('d/m/Y') }} ({{ user.age }} ans)</p>
-		<p><span class="profile-info-label">Rôle : </span>
-			{% if user.roles[0] == "ROLE_ADMIN" %}Administrateur
-			{% elseif user.roles[0] == "ROLE_EVALUATOR" %}Evaluateur
-			{% elseif user.roles[0] == "ROLE_USER" %}Joueur
-			{% endif %}
-		</p>
-		<p><span class="profile-info-label">Nom joueur : </span>
-			{% if player %}{{ player.name }}
-			{% else %}-
-			{% endif %}
-		</p>
+		<table>
+			<tbody>
+				<tr>
+					<td class="profile-info-label">Nom utilisateur :</td>
+					<td>{{ user.username }}</td>
+				</tr>
+				<tr>
+					<td class="profile-info-label">Date de naissance :</td>
+					<td>{{ user.birthday|date('d/m/Y') }} ({{ user.age }} ans)</td>
+				</tr>
+				<tr>
+					<td class="profile-info-label">Rôle : </td>
+					<td>
+						{% if user.roles[0] == "ROLE_ADMIN" %}Administrateur
+						{% elseif user.roles[0] == "ROLE_EVALUATOR" %}Evaluateur
+						{% elseif user.roles[0] == "ROLE_USER" %}Joueur
+						{% endif %}
+					</td>
+				</tr>
+				<tr>
+					<td class="profile-info-label">Nom joueur :</td>
+					<td>
+						{% if player %}{{ player.name }}
+						{% else %}-
+						{% endif %}
+					</td>
+				</tr>
+			</tbody>
+		</table>
 		
 		<h3><span class="label">Performances actuelles</span></h3>
-		<p><span class="profile-info-label">Classement : </span>{{ rank }}</p>
-		<p><span class="profile-info-label">Série en cours : </span>{{ currentForm }}</p>
-		<p><span class="profile-info-label">Dernier match : </span>
-			{% if lastMatch %}{{ lastMatch.date|date('d/m/Y') }} {{ resultForPlayer }}
-			{% else %}-
-			{% endif %}
-		</p>
+		<table>
+			<tbody>
+				<tr>
+					<td class="profile-info-label">Classement : </td>
+					<td>{{ rank }}</td>
+				</tr>
+				<tr>
+					<td class="profile-info-label">Série en cours : </td>
+					<td>{{ currentForm }}</td>
+				</tr>
+				<tr>
+					<td class="profile-info-label">Dernier match : </td>
+					<td>
+						{% if lastMatch %}{{ lastMatch.date|date('d/m/Y') }} {{ resultForPlayer }}
+						{% else %}-
+						{% endif %}
+					</td>
+				</tr>
+			</tbody>
+		</table>
 
 		<h3><span class="label">Statistiques Classement</span></h3>
-		<p><span class="profile-info-label">Meilleur classement : </span>{{ bestRank }}</p>
-		<p><span class="profile-info-label">Pire classement : </span>{{ worstRank }}</p>
-		<p><span class="profile-info-label">Nb fois champion du trimestre : </span>{{ nbTitles }}</p>
-		<p><span class="profile-info-label">Nb fois sur le podium du trimestre : </span>{{ nbPodiums }}</p>
-		<p><span class="profile-info-label">Nb fois relégué du trimestre : </span>{{ nbRelegations }}</p>
-		<p><span class="profile-info-label">Nb fois lanterne rouge du trimestre : </span>{{ nbTimesLast }}</p>
+		<table>
+			<tbody>
+				<tr>
+					<td class="profile-info-label">Meilleur classement : </td>
+					<td>{{ bestRank }}</td>
+				</tr>
+				<tr>
+					<td class="profile-info-label">Pire classement : </td>
+					<td>{{ worstRank }}</td>
+				</tr>
+				<tr>
+					<td class="profile-info-label">Champions : </td>
+					<td>{{ nbTitles }}</td>
+				</tr>
+				<tr>
+					<td class="profile-info-label">Podiums : </td>
+					<td>{{ nbPodiums }}</td>
+				</tr>
+				<tr>
+					<td class="profile-info-label">Relégations : </td>
+					<td>{{ nbRelegations }}</td>
+				</tr>
+				<tr>
+					<td class="profile-info-label">Lanterne rouge : </td>
+					<td>{{ nbTimesLast }}</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 </div>
 
