--- a/src/foot5x5/MainBundle/Resources/views/layout.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/layout.html.twig
@@ -4,11 +4,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ asset('lib/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ asset('lib/bootstrap/css/bootstrap-table.css') }}" rel="stylesheet">
     <link href="{{ asset('lib/jquery/jquery-ui.min.css') }}" rel="stylesheet">
     <link href="{{ asset('lib/jquery/jquery-ui.structure.min.css') }}" rel="stylesheet">
     <link href="{{ asset('lib/jquery/jquery-ui.theme.min.css') }}" rel="stylesheet">
+    
     <link href="{{ asset('css/foot5x5.css') }}" rel="stylesheet">
     <title>Foot 5x5 - {% block title %}{% endblock %}</title>
 
@@ -25,90 +27,110 @@
 </head>
 
 <body>
+
+<nav class="navbar navbar-custom navbar-fixed-top navbar-inverse dark-blue-grad" role="navigation">
     <div class="container">
-        <nav class="navbar navbar-custom navbar-fixed-top navbar-inverse dark-blue-grad" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-target">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-left" href="{{ path('welcome') }}"><img src="{{ 'logoFoot5x5_001d.png'  | imagine_filter('avatar_40') }}" alt="Foot5x5_logo" /></a>
-                </div>
-                <div class="collapse navbar-collapse" id="navbar-collapse-target">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-target">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{ path('welcome') }}"><img src="{{ 'logoFoot5x5_001d.png'  | imagine_filter('avatar_40') }}" alt="Foot5x5_logo" /></a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse-target">
+            {% if app.session.get('community_name') is not empty %}
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="{{ path('foot5x5_main_homepage') }}">{{app.session.get('community_name')}}<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ path('foot5x5_main_homepage') }}">Home</a></li>
+                        <li><a href="{{ path('welcome') }}">Changer communauté</a></li>
+                    </ul>
+                </li>
+                <li {% if app.request.attributes.get('_route') == 'results' %}class="active"{% endif %}>
+                    <a href="{{ path('results') }}">Résultats</a>
+                </li>
+                <li {% if app.request.attributes.get('_route') == 'standings' %}class="active"{% endif %}>
+                    <a href="{{ path('standings') }}">Classement</a>
+                </li>
+                <li {% if app.request.attributes.get('_route') == 'players' %}class="active"{% endif %}>
+                    <a href="{{ path('players') }}">Joueurs</a>
+                </li>
+                <li {% if app.request.attributes.get('_route') == 'random_draw' %}class="active"{% endif %}>
+                    <a href="{{ path('random_draw') }}">Tirage</a>
+                </li>
+                <li {% if app.request.attributes.get('_route') == 'finances' %}class="active"{% endif %}>
+                    <a href="{{ path('finances') }}">Finances</a>
+                </li>
+                {% if app.user and is_granted('ROLE_EVALUATOR') %}
+                <li {% if app.request.attributes.get('_route') == 'notes' %}class="active"{% endif %}>
+                    <a href="{{ path('notes') }}"><span class="glyphicon glyphicon-cog"></span> Notes</a>
+                </li>
+                {% endif %}
+            </ul>
+            {% else %}
+            <ul id="navbar-site-title" class="nav navbar-nav">
+                <li><a href="{{ path('welcome') }}">FOOT 5X5</a></li>
+            </ul>
+            {% endif %}
+            <ul class="nav navbar-nav navbar-right">
+                {% if app.user and is_granted('IS_AUTHENTICATED_FULLY') %}
                     {% if app.session.get('community_name') is not empty %}
-                    <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="{{ path('foot5x5_main_homepage') }}">{{app.session.get('community_name')}}<b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="{{ path('foot5x5_main_homepage') }}">Home</a></li>
-                                <li><a href="{{ path('welcome') }}">Changer communauté</a></li>
-                            </ul>
-                        </li>
-                        <li {% if app.request.attributes.get('_route') == 'results' %}class="active"{% endif %}>
-                            <a href="{{ path('results') }}">Résultats</a>
-                        </li>
-                        <li {% if app.request.attributes.get('_route') == 'standings' %}class="active"{% endif %}>
-                            <a href="{{ path('standings') }}">Classement</a>
-                        </li>
-                        <li {% if app.request.attributes.get('_route') == 'players' %}class="active"{% endif %}>
-                            <a href="{{ path('players') }}">Joueurs</a>
-                        </li>
-                        <li {% if app.request.attributes.get('_route') == 'random_draw' %}class="active"{% endif %}>
-                            <a href="{{ path('random_draw') }}">Tirage</a>
-                        </li>
-                        <li {% if app.request.attributes.get('_route') == 'finances' %}class="active"{% endif %}>
-                            <a href="{{ path('finances') }}">Finances</a>
-                        </li>
-                        {% if app.user and is_granted('ROLE_EVALUATOR') %}
-                        <li {% if app.request.attributes.get('_route') == 'notes' %}class="active"{% endif %}>
-                            <a href="{{ path('notes') }}"><span class="glyphicon glyphicon-cog"></span> Notes</a>
+                        {% if app.user and is_granted('ROLE_ADMIN') %}
+                        <li class="{% if adminMenu is defined %}active{% endif %}">
+                            <a href="{{ path('admin_home') }}"><span class="glyphicon glyphicon-cog"></span> Administration</a>
                         </li>
                         {% endif %}
-                    </ul>
-                    {% else %}
-                    <ul id="navbar-site-title" class="nav navbar-nav">
-                        <li><a href="{{ path('welcome') }}">FOOT 5X5</a></li>
-                    </ul>
                     {% endif %}
-                    <ul class="nav navbar-nav navbar-right">
-                        {% if app.user and is_granted('IS_AUTHENTICATED_FULLY') %}
-                            {% if app.session.get('community_name') is not empty %}
-                                {% if app.user and is_granted('ROLE_ADMIN') %}
-                                <li class="{% if adminMenu is defined %}active{% endif %}">
-                                    <a href="{{ path('admin_home') }}"><span class="glyphicon glyphicon-cog"></span> Administration</a>
-                                </li>
-                                {% endif %}
-                            {% endif %}
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-user"></span> {{ app.user.username }} <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="{{ path('myprofile') }}">Mon Profil</a></li>
-                                    <li><a href="{{ path('logout') }}">Déconnexion</a></li>
-                                </ul>
-                            </li>
-                        {% else %}
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-user"></span> Non connecté <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="{{ path('register') }}">S'inscrire</a></li>
-                                    <li><a href="{{ path('login') }}">Connexion</a></li>
-                                </ul>
-                            </li>
-                        {% endif %}
-                    </ul>
-                </div>
-            </div><!-- /.container -->
-        </nav>
-        <div id="content" class="container">{% block content %}{% endblock %}</div>
-        <div id="footer">
-            <div class="container">
-                <p class="navbar-text pull-left">Foot 5x5 - © Etistav, 2018</p>
-            </div>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-user"></span> {{ app.user.username }} <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ path('myprofile') }}">Mon Profil</a></li>
+                            <li><a href="{{ path('logout') }}">Déconnexion</a></li>
+                        </ul>
+                    </li>
+                {% else %}
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-user"></span> Non connecté <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ path('register') }}">S'inscrire</a></li>
+                            <li><a href="{{ path('login') }}">Connexion</a></li>
+                        </ul>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
     </div>
+</nav>
+{% if (app.request.attributes.get('_route') == 'home')
+   or (app.request.attributes.get('_route') == 'welcome') %}
+    {% block homecontent %}{% endblock %}
+{% else %}
+<div id="content" class="container">
+    {% block content %}{% endblock %}
+</div>
+{% endif %}
+
+<footer class="container-fluid text-center">
+	<div class="row">
+		<div class="col-xs-4">
+			<img src="{{ asset('img/logoFoot5x5_001d.png') }}" class="icon">
+		</div>
+		<div class="col-xs-4">
+			<h4>Foot 5x5 - © Etistav, 2018</h4>
+		</div>
+		<div class="col-xs-4">
+			<a href="#" class="fa fa-facebook"></a>
+			<a href="#" class="fa fa-twitter"></a>
+			<a href="#" class="fa fa-instagram"></a>
+			<a href="#" class="fa fa-linkedin"></a>
+			<a href="#" class="fa fa-youtube"></a>
+		</div>
+	</div>
+</footer>
+
 </body>
 </html>
