--- a/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
+++ b/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
@@ -1,34 +1,31 @@
 {% extends "foot5x5MainBundle::layout.html.twig" %}
 
-{% block title %}{{ title }}{% endblock %}
-
-{% block content %}
-<h2 class="text-center">{{ block('title') }}</h2>
-{% for flashMessage in app.session.flashbag.get('success') %}
-<div class="alert alert-success">
-    {{ flashMessage }}
-</div>
-{% endfor %}
-<div class="col-sm-12">
-    <div id="welcome-buttons" class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
-        <img src="{{ 'logoFoot5x5_001d.png'  | imagine_filter('avatar_200') }}" alt="Foot5x5_logo" class="img-responsive"/>
+{% block homecontent %}
+<div id="landing">
+	<div class="landing-content">
+		<h2>Bienvenue</h2>
+		<h1>{{ username }} !</h1>
+		<img src="{{ asset('logoFoot5x5_001d.png') }}" alt="Foot5x5_logo" class="img-responsive"/>
+		<h3>Créé ta communauté foot5x5 ou rejoins en une déjà existante!</h3>
+        <div>
         <a href="{{ path('create_community') }}"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Créer une communauté</button></a>
         <a href="{{ path('join_community') }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Rejoindre une communauté</button></a>
-    </div>
-    {% if communities is not empty %}
-    <div id="welcome-communities" class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
-        <h3 class="text-center">Vos communautés</h3>
-        <ul class="list-group">
-            {% for community in communities %}
-                <a href="{{ path('select_community', {'id':community.id}) }}"><li class="list-group-item">{{ community.name }}</li></a>
-            {% endfor %}
-        </ul>
-    </div>
-    {% else %}
-    <div class="alert alert-warning col-sm-6 col-sm-offset-3">
-        <span>Vous n'appartenez à aucune communauté pour le moment.</span>
-    </div>
-    {% endif %}
+        </div>
+        {% if communities is not empty %}
+        <div id="welcome-communities" class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+            <h3 class="text-center">Vos communautés</h3>
+            <ul class="list-group">
+                {% for community in communities %}
+                    <a href="{{ path('select_community', {'id':community.id}) }}"><li class="list-group-item">{{ community.name }}</li></a>
+                {% endfor %}
+            </ul>
+        </div>
+        {% else %}
+        <div class="alert alert-warning col-sm-6 col-sm-offset-3">
+            <span>Vous n'appartenez à aucune communauté pour le moment.</span>
+        </div>
+        {% endif %}
+	</div>
 </div>
 
 {% endblock %}
