--- a/web/css/foot5x5.css
+++ b/web/css/foot5x5.css
@@ -10,18 +10,23 @@
 /*   GENERAL                 */
 /* ------------------------- */
 
+html, body {
+	height: 100%;
+	width: 100%;
+	font-family: montserrat, "Trebuchet MS", Helvetica, sans-serif;
+	color: #191950;
+}
+
 body {
     background: linear-gradient(to right, rgb(250,250,250) 0%, (234,234,250) 100%);
 	background: -moz-linear-gradient(right, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
     background: -o-linear-gradient(right, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
     background: -webkit-linear-gradient(left, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
-	color: #191950;
-    font-family: montserrat, "Trebuchet MS", Helvetica, sans-serif;
-    padding-top: 60px;
+    /* padding-top: 60px; */
 }
 #content {
-	width: 100%;
 	min-height: 800px;
+	margin-top: 50px;
 }
 .well {
     background: linear-gradient(to bottom, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
@@ -85,26 +90,30 @@ h2, h3 {
 }
 
 #navbar-site-title li a {
-	font-family: montserrat;
 	font-size: 18px;
 }
 
-.navbar-left {
-    float: left!important;
+.navbar {
+	padding: 0;
+	font-size: 1.1em;
+}
+.navbar-brand {
+	min-height: 40px;
+	padding: 5px 15px 5px;
 }
 
-nav.navbar-custom {
+.navbar-custom {
 	border-bottom: 3px solid #4F5261;
 }
-nav.navbar-custom div.container div#navbar-collapse-target ul.navbar-nav li.active a {
+.navbar-custom .navbar-nav li.active a,
+.navbar-custom .navbar-nav li.active a:hover {
 	background-color: #4F5261;
 }
-nav.navbar-custom div.container div#navbar-collapse-target ul.navbar-nav li a,
-nav.navbar-custom div.container div.navbar-header a.navbar-brand {
+.navbar-custom .navbar-nav li a {
 	color: #E0F0FF;
 }
-nav.navbar-custom div.container div#navbar-collapse-target ul.navbar-nav li a:hover,
-nav.navbar-custom div.container div.navbar-header a.navbar-brand:hover {
+.navbar-custom .navbar-nav li a:hover, 
+.navbar-custom .navbar-nav li.active a:hover {
 	color: #99CCFF;
 }
 li.dropdown.open a.dropdown-toggle, 
@@ -129,24 +138,119 @@ div#content {
 /*   WELCOME / HOME          */
 /* ------------------------- */
 
-div#welcome-buttons a button,
-div#home-buttons a button {
+#landing {
+	background: url(../img/bg_penalty-kick.jpg) no-repeat center center fixed;
+	display: table;
+	height: 100%;
+	position: relative;
+	width: 100%;
+	background-size: cover;
+}
+.landing-content {
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
+	color: #E0F0FF;
+	max-width: 500px;
+	border-bottom: 3px solid #4F5261;
+}
+.landing-content h1 {
+	font-size: 500%;
+	font-weight: 700;
+	text-shadow: 3px 3px 5px rgba(0, 0, 86, 1);
+}
+.landing-content h2 {
+	font-size: 300%;
+	font-weight: 700;
+	text-shadow: 3px 3px 5px rgba(0, 0, 86, 1);
+}
+.landing-content h3 {
+	font-size: 200%;
+	font-weight: 500;
+	text-shadow: 3px 3px 5px rgba(0, 0, 86, 1);
+}
+.landing-content img {
+	margin: auto;
+	display: block;
+}
+.landing-content a button {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 20px;
 	height: 70px;
-	width: 100%;
+	width: 200px;
 	white-space: normal;
-}
-div#welcome-buttons img,
-div#home-buttons img {
-	margin: auto;
-	margin-bottom: 2em;
+	border: 2px solid #E0F0FF;
 }
 
+.home-padding {
+	padding: 40px 0;
+}
+.home-padding img {
+	width: 100%
+}
+.home-container h2 {
+	font-size: 250%;
+	font-weight: 700;
+}
+.home-container p {
+	font-size: 130%;
+	font-weight: 500;
+}
+.home-container span.glyphicon {
+	margin-right: 10px;
+}
+.grid {
+	padding: 0 20px 0 20px;
+	display: grid;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+}
+#home-create .grid {
+	margin-top: 50px;
+	grid-template-columns: 2fr 2fr;
+	grid-template-rows: 2fr 2fr;
+}
+.grid > img {
+	margin: auto;
+	border: solid 1px #191950;
+	width: 260px;
+	height: 200px;
+}
+#home-join .row div {
+	min-height: 300px;
+}
+#home-join .row div h2 {
+	vertical-align: middle;
+}
+#home-join img {
+	width: 100%;
+	height: auto;
+	max-width: 555px;
+    max-height: 360px;
+}
+#fixed {
+	background: url(../img/bg_net.jpg) no-repeat center center fixed;
+	display: table;
+	height: 60%;
+	position: relative;
+	width: 100%;
+	background-size: cover;
+	border-top: 3px solid #4F5261;
+	border-bottom: 3px solid #4F5261;
+}
+#home-prefooter a button {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 20px;
+	height: 70px;
+	width: 200px;
+	white-space: normal;
+	border: 2px solid #E0F0FF;
+}
 div#welcome-communities {
 	margin-top: 10px;
-	border-top: 1px solid #191950;
+	border-top: 2px solid #E0F0FF;
 }
 div#welcome-communities li {
 	margin-top: 5px;
@@ -1080,17 +1184,59 @@ tr#finances-totalCredits td {
 /* ------------------------- */
 /*   FOOTER                  */
 /* ------------------------- */
-#footer {
-	border-top: 1px solid #4F5261;
-	margin-top: 10px;
-    padding: 0;
-    text-align: left;
+footer {
+	display: table;
+	width: 100%;
+	background-color: #191950;
+	padding: 1% 5% 2% 5%;
+	color: #E0F0FF;
+	border-top: 3px solid #4F5261;
+	height: 80px;
 }
-#footer div.container {
-    padding: 0;
+footer img {
+	height: 60px;
 }
-#footer p {
-	color: #191950;
-	font-style: italic;
-	margin: 5px;
+footer div {
+	display: table-cell;
+	height: 100%;
+	/* margin: auto; */ 
+}
+footer div h4 {
+	height: 100%;
+	vertical-align: middle;
+}
+.fa {
+	padding: 10px;
+	font-size: 25px;
+	color: #E0F0FF;
+}
+.fa:hover {
+	color: #99CCFF;
+	text-decoration: none;
+}
+.icon {
+	max-width: 100px;
+}
+
+@media (max-width: 768px) {
+	.landing-content h1 {
+		font-size: 400%;
+	}
+	.landing-content h2 {
+		font-size: 250%;
+	}
+	.landing-content h3 {
+		font-size: 150%;
+	}
+	footer div h4 {
+		font-size: 100%;
+	}
+	.fa {
+		font-size: 15px;
+		padding: 5px;
+	}
+	.icon {
+		padding-top: 5%
+		max-width: 100px;
+	}
 }
